--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   flutter_analog_clock: ^0.1.1
   table_calendar: ^3.0.3
   timelines: ^0.1.0
+  shared_preferences: ^2.0.11
 
 dev_dependencies:
   flutter_test:
