--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,9 @@ dependencies:
   table_calendar: ^3.0.3
   timelines: ^0.1.0
   shared_preferences: ^2.0.11
+  http: ^0.13.4
+  provider: ^6.0.2
+  fimber: ^0.6.4
 
 dev_dependencies:
   flutter_test:
