--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   http: ^0.13.4
   provider: ^6.0.2
   fimber: ^0.6.4
+  flutter_phoenix: ^1.0.0
 
 dev_dependencies:
   flutter_test:
