--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,10 @@ dependencies:
   provider: ^6.0.2
   fimber: ^0.6.4
   flutter_phoenix: ^1.0.0
+  image_picker: ^0.8.4+4
+  fluttertoast: ^8.0.8
+  geolocator: ^8.0.1
+  geocoding: ^2.0.1
 
 dev_dependencies:
   flutter_test:
