--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,11 +41,12 @@ dependencies:
   http: ^0.13.4
   provider: ^6.0.2
   fimber: ^0.6.4
-  flutter_phoenix: ^1.0.0
   image_picker: ^0.8.4+4
   fluttertoast: ^8.0.8
   geolocator: ^8.0.1
   geocoding: ^2.0.1
+  url_launcher: ^6.0.18
+  file_picker: ^4.3.2
 
 dev_dependencies:
   flutter_test:
